# CacheSim

./: CMakeLists.txt  CacheSim  README.md
analysis/: CacheSim Data Analysis.ipynb  Scratch Notebook.ipynb
analysis/.ipynb_checkpoints/: CacheSim Data Analysis-checkpoint.ipynb  Scratch Notebook-checkpoint.ipynb
data/: New Text Document.txt  as_fifo.csv  as_fifo2.csv  as_lru.csv  as_lru2.csv  big_data.csv  delete.csv  largest_file_ever.csv  largest_file_ever_2.csv  repair.csv  repair2.csv  replacement_fixed.csv  size_fixed.csv  slack.csv  test.csv  type_fixed.csv
src/: cachePrint.cpp  cachePrint.h  main.cpp
src/cachePrint/: cachePrint.cpp  cachePrint.h
src/cachetypes/: FullyAssociative.cpp  FullyAssociative.h  SetAssociative.cpp  SetAssociative.h
src/cachetypes/parent/: Cache.cpp  Cache.h
src/help/: help.cpp  help.h
src/test/: test.cpp
src/tracehandler/: Tracehandler.cpp  Tracehandler.h
